tests/machine/x/cpp/substring_builtin.mochi.error
line 13: ../../../tests/machine/x/cpp/substring_builtin.mochi.cpp: In function ‘int main()’:
../../../tests/machine/x/cpp/substring_builtin.mochi.cpp:13:11: error: ‘substring’ was not declared in this scope
   13 |     print(substring("mochi", 1, 4));
      |           ^~~~~~~~~

 12 | int main() {
 13 |     print(substring("mochi", 1, 4));
 14 |     return 0;
